# ndsort

./: .codespellrc  .gitignore  BENCHMARKS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  README.md  flake.nix  pyproject.toml  results.csv  vcpkg.json
.github/workflows/: ci.yml  publish.yml
benchmark/: CMakeLists.txt
benchmark/source/: bench.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: design.md
example/: CMakeLists.txt  basic_example.cpp
include/ndsort/: best_order_sort.hpp  concepts.hpp  deductive.hpp  dominance.hpp  dominance_degree.hpp  efficient_sort.hpp  fronts.hpp  hierarchical_sort.hpp  merge_sort.hpp  ndsort.hpp  rank_intersect.hpp  rank_ordinal.hpp  traits.hpp
include/ndsort/adapters/: eps_adapter.hpp
include/ndsort/detail/: flat_fitness.hpp  sorter_base.hpp  sorting_primitives.hpp
python/: CMakeLists.txt  pytest.ini
python/ndsort/: __init__.py
python/src/: ndsort_bind.cpp
python/tests/: conftest.py  test_correctness.py  test_performance.py
scripts/: generate_benchmarks.py
source/: best_order_sort.cpp  deductive.cpp  dominance_degree.cpp  efficient_sort.cpp  hierarchical_sort.cpp  merge_sort.cpp  ndsort.cpp  rank_intersect.cpp  rank_ordinal.cpp
test/: CMakeLists.txt
test/data/: dtlz1_n2000_m10.csv  dtlz1_n2000_m2.csv  dtlz1_n2000_m3.csv  dtlz1_n2000_m5.csv  dtlz1_n500_m10.csv  dtlz1_n500_m2.csv  dtlz1_n500_m3.csv  dtlz1_n500_m5.csv  dtlz2_n2000_m10.csv  dtlz2_n2000_m2.csv  dtlz2_n2000_m3.csv  dtlz2_n2000_m5.csv  dtlz2_n500_m10.csv  dtlz2_n500_m2.csv  dtlz2_n500_m3.csv  dtlz2_n500_m5.csv  generate.py  zdt1_n2000_m2.csv  zdt1_n500_m2.csv  zdt2_n2000_m2.csv  zdt2_n500_m2.csv
test/source/: ndsort_test.cpp
